Load library build

--- a/tests/index.html
+++ b/tests/index.html
@@ -10,6 +10,7 @@
         <div id="qunit"></div>
         <div id="qunit-fixture"></div>
         <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
+        <script src="dist/complete-library-build.js"></script>
         <script src="all-tests.php"></script>
     </body>
 </html>
