--- a/tests/index.html
+++ b/tests/index.html
@@ -11,6 +11,6 @@
         <div id="qunit-fixture"></div>
         <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
         <script src="./dist/complete-library-build.js"></script>
-        <script src="./dist/all-tests.js"></script>
+        <script src="./dist/js/all-tests.js"></script>
     </body>
 </html>
