--- a/tests/index.html
+++ b/tests/index.html
@@ -9,6 +9,6 @@
     <body>
         <div id="qunit"></div>
         <div id="qunit-fixture"></div>
-        <script src="./dist/js/all-tests.js"></script>
+        <script src="./dist/js/all-tests/legacy/all-tests.js"></script>
     </body>
 </html>
